# task_2

./: .gitignore  Dockerfile  README.md  airflow.py  airflow_scheduler.py  compose.yaml  docker-compose.yml  lambda.py  output.csv  pyproject.toml  scrap_job.py  scraper_class.py  transformation.py  utils.py  worker.py
airflow_home/: airflow.cfg  airflow.db
data/bronze/raw_html/: Airflow Documentation.html  DSA Tutorial.html
data/bronze/raw_json/: .json  facebook_profile_20260721_151317.json  facebook_profile_20260721_164249.json  instagram_profile_20260721_145356.json  instagram_profile_20260722_103904.json  instagram_profile_20260723_112444.json  instagram_profile_20260723_225839_135036.json  instagram_profile_20260723_230622_621841.json  instagram_reel_20260720_170112.json  instagram_reel_20260720_170815.json  instagram_reel_20260720_174048.json  instagram_video_20260721_120306.json  instagram_video_20260721_121745.json  result.json  result_20260714_101038_ig_post.json  result_20260714_105251_fb_post.json  result_20260714_110232_re_post.json  result_20260714_111016_re_comments.json  result_20260714_112452_fb_comments.json  result_20260716_115456_ig_comments.json  result_20260719_113041_tiktok_comments.json  (+9 more)
data/silver/: comments_20260721_153802.csv  comments_20260723_230717_736598.csv  posts_20260721_153802.csv  posts_20260723_230717_736598.csv  profiles_20260721_154038.csv  profiles_20260723_230717_736598.csv  videos_20260721_153802.csv  videos_20260723_230717_736598.csv
docs/: scraper-and-transformation.md
tests/: test_scraper_class.py  test_transformation.py
