[project]
name = "task-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Chin Tat Leong",email = "chin.tatleong@ws.mcsaatchi.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "playwright (>=1.61.0,<2.0.0)",
    "apache-airflow (>=3.2.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "dbt-core (>=1.11.11,<2.0.0)",
    "boto3 (>=1.35.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
